--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,12 @@ body {
 }
 
 /*==============================================
+|||||||||||||||||||||||||||||||||||||||||||||||||
   모바일 Mobile
+|||||||||||||||||||||||||||||||||||||||||||||||||
+================================================*/
+/*==============================================
+  랜딩 페이지
 ================================================*/
 /*<----------헤더 header---------->*/
 .header {
@@ -106,7 +111,7 @@ body {
   height: 100vh;
   background-color: #f3f4f6;
   transform: translateX(100%);
-  transition: all 0.6s;
+  transition: transform 0.6s;
 }
 .nav_wrap .nav.show {
   display: block;
@@ -126,7 +131,7 @@ body {
   color: #6d6e71;
   font-size: 1.4em;
   font-weight: 800;
-  transition: all 0.1s;
+  transition: background 0.2s, color 0.1s;
 }
 .nav_wrap .depth1_title.on {
   background: #072559;
@@ -198,7 +203,7 @@ body {
   position: relative;
   padding: 20px 10px;
 }
-.search_section .search_title {
+.search_section .section_title {
   position: absolute;
   top: 0;
   left: 0;
@@ -327,6 +332,285 @@ body {
   opacity: 1;
 }
 
+/*<----------홈 바로가기 아이콘 shortcut icons---------->*/
+.shortcut_icon_section .center_wrap {
+  position: relative;
+  padding: 20px 10px;
+  background: #fff;
+}
+.shortcut_icon_section .slider_wrap {
+  position: relative;
+  overflow: hidden;
+  height: 200px;
+  max-width: calc(100% - 80px);
+  margin: 0 auto;
+}
+.shortcut_icon_section .slider {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.shortcut_icon_section .slider.animated {
+  transition: left 0.3s;
+}
+.shortcut_icon_section .slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  width: 50%;
+}
+.shortcut_icon_section .content_wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 80%;
+}
+.shortcut_icon_section .content_wrap img {
+  height: 60%;
+  max-height: 85px;
+}
+.shortcut_icon_section .icon_txt {
+  margin-top: 15px;
+  color: #231f20;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.shortcut_icon_section .prev_btn,
+.shortcut_icon_section .next_btn {
+  display: block;
+  position: absolute;
+  top: 50%;
+  z-index: 3;
+  width: 40px;
+  height: 40px;
+  transform: translateY(-50%);
+}
+.shortcut_icon_section .prev_btn img,
+.shortcut_icon_section .next_btn img {
+  display: block;
+  height: 100%;
+  margin: 0 auto;
+}
+.shortcut_icon_section .prev_btn {
+  left: 10px;
+}
+.shortcut_icon_section .prev_btn img {
+  transform: rotate(180deg);
+}
+.shortcut_icon_section .next_btn {
+  right: 10px;
+}
+
+/*<----------홈 공지사항 notice---------->*/
+.notice_section {
+  padding: 20px 10px;
+}
+.notice_section .section_head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 2px solid #000;
+}
+.notice_section .section_title {
+  color: #000;
+  font-size: 1.9rem;
+  font-weight: 800;
+}
+.notice_section .more_link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+}
+.notice_section .notice_list {
+  padding: 15px 0;
+}
+.notice_section .notice_list li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0;
+}
+.notice_section .notice_list .notice_title {
+  overflow: hidden;
+  color: #231f20;
+  font-size: 1.3rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.notice_section .notice_list .notice_title::before {
+  display: inline-block;
+  margin-right: 3px;
+  width: 0.6rem;
+  height: 0.6rem;
+  border-radius: 50%;
+  background: #43b5be;
+  transform: translateY(-0.1rem);
+  content: "";
+}
+.notice_section .notice_list .notice_date {
+  flex-shrink: 0;
+  margin-left: 10px;
+  color: #6d6e71;
+  font-size: 1rem;
+}
+
+/*<----------홈 바로가기 블럭 shortcut blocks---------->*/
+.shortcut_block_section {
+  display: flex;
+  flex-wrap: wrap;
+}
+.shortcut_block_section > div {
+  width: 50%;
+  height: 40vw;
+}
+.shortcut_block_section .text_wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  text-align: center;
+}
+.shortcut_block_section .shortcut_txt {
+  font-size: 1.7rem;
+  font-weight: 600;
+}
+.shortcut_block_section .shortcut_txt_sub {
+  margin-top: 15px;
+  font-size: 1.4rem;
+}
+.shortcut_block_section .schedule {
+  background: center/cover no-repeat url("../images/bg_calendar.png");
+}
+.shortcut_block_section .schedule .shortcut_txt_sub::after {
+  display: inline-block;
+  width: 1.6rem;
+  height: 1.6rem;
+  margin-left: 5px;
+  background: center/contain no-repeat url("../images/arrow_next_white.png");
+  transform: translateY(0.4rem);
+  content: "";
+}
+.shortcut_block_section .sites {
+  background: center/cover no-repeat url("../images/bg_sites.png");
+}
+.shortcut_block_section .faq {
+  background: center/cover no-repeat url("../images/bg_faq.png");
+}
+.shortcut_block_section .ask {
+  background: center/cover no-repeat url("../images/bg_question.png");
+}
+.shortcut_block_section .ask .shortcut_txt {
+  line-height: 1.3;
+}
+
+/*<----------도서 books---------->*/
+.books_section {
+  padding: 30px 10px;
+  background: #f3f4f6;
+}
+.books_section .center_wrap {
+  position: relative;
+}
+.books_section .category_tabs {
+  display: flex;
+  border-bottom: 2px solid #000;
+  margin-bottom: 30px;
+  padding: 10px;
+}
+.books_section .tab {
+  color: #6d6e71;
+  font-size: 1.9rem;
+  font-weight: 800;
+  margin-right: 12px;
+  transition: color 0.2s;
+  cursor: pointer;
+}
+.books_section .tab:last-child {
+  margin-right: 0;
+}
+.books_section .tab.on {
+  color: #000;
+}
+.books_section .tab:hover {
+  color: #3d5bcb;
+}
+.books_section .books_list_wrap {
+  display: none;
+}
+.books_section .books_list_wrap.on {
+  display: block;
+}
+.books_section .books_list {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+.books_section .books_list li {
+  flex-shrink: 0;
+  width: 50%;
+}
+.books_section .book_content {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 0 auto;
+}
+.books_section .book_cover {
+  height: 30vh;
+  min-height: 200px;
+}
+.books_section .book_cover img {
+  max-width: initial;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.books_section .book_title {
+  overflow: hidden;
+  margin: 20px 5px 10px;
+  color: #231f20;
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.books_section .book_info {
+  overflow: hidden;
+  margin: 0 5px 10px;
+  color: #6d6e71;
+  font-size: 1.3rem;
+  text-align: center;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.books_section .book_date {
+  margin: 0 5px 10px;
+  color: #6d6e71;
+  font-size: 1.3rem;
+  text-align: center;
+}
+.books_section .more_link {
+  display: block;
+  position: absolute;
+  top: 40px;
+  right: 20px;
+  width: 2rem;
+  height: 2rem;
+}
+
 /*<----------푸터 footer---------->*/
 .footer {
   background: #32393f;
@@ -388,9 +672,14 @@ body {
 }
 
 /*==============================================
+|||||||||||||||||||||||||||||||||||||||||||||||||
   태블릿 Tablet
+|||||||||||||||||||||||||||||||||||||||||||||||||
 ================================================*/
 @media only screen and (min-width: 768px) {
+  /*==============================================
+    랜딩 페이지
+  ================================================*/
   /*<----------헤더 header---------->*/
   .header .util_mobile_wrap {
     display: none;
@@ -458,7 +747,7 @@ body {
     font-size: 1.7rem;
   }
   /*<----------홈 검색 search---------->*/
-  .search_section .search_title {
+  .search_section .section_title {
     position: static;
     width: initial;
     height: initial;
@@ -472,6 +761,116 @@ body {
   }
   .search_section .search_input {
     padding: 10px 49px 10px 15px;
+  }
+  /*<----------홈 바로가기 아이콘 shortcut icons---------->*/
+  .shortcut_icon_section .center_wrap {
+    max-width: 75%;
+    padding: 20px 0;
+  }
+  .shortcut_icon_section .slider_wrap {
+    height: 220px;
+    max-width: calc(100% - 96px);
+  }
+  .shortcut_icon_section .slide {
+    width: 33%;
+  }
+  .shortcut_icon_section .content_wrap img {
+    max-height: 100px;
+  }
+  .shortcut_icon_section .icon_txt {
+    margin-top: 30px;
+    font-size: 1.7rem;
+  }
+  .shortcut_icon_section .prev_btn,
+.shortcut_icon_section .next_btn {
+    width: 48px;
+    height: 48px;
+  }
+  .shortcut_icon_section .prev_btn {
+    left: 0px;
+  }
+  .shortcut_icon_section .next_btn {
+    right: 0px;
+  }
+  /*<----------홈 공지사항 notice---------->*/
+  .notice_section {
+    max-width: 75%;
+    margin: 0 auto;
+  }
+  .notice_section .section_head {
+    padding: 15px;
+  }
+  .notice_section .section_title {
+    font-size: 2.4rem;
+  }
+  .notice_section .more_link {
+    width: 2.4rem;
+    height: 2.4rem;
+  }
+  .notice_section .notice_list .notice_title {
+    font-size: 1.7rem;
+  }
+  .notice_section .notice_list .notice_title::before {
+    width: 0.8rem;
+    height: 0.8rem;
+    transform: translateY(-0.15rem);
+  }
+  .notice_section .notice_list .notice_date {
+    font-size: 1.5rem;
+  }
+  /*<----------홈 바로가기 블럭 shortcut block---------->*/
+  .shortcut_block_section > div {
+    width: 25%;
+    height: 20vw;
+  }
+  .shortcut_block_section .shortcut_txt {
+    font-size: 2.4rem;
+  }
+  .shortcut_block_section .shortcut_txt_sub {
+    font-size: 2.1rem;
+  }
+  .shortcut_block_section .schedule .shortcut_txt_sub::after {
+    width: 1.8rem;
+    height: 1.8rem;
+    transform: translateY(0.4rem);
+  }
+  /*<----------도서 books---------->*/
+  .books_section {
+    padding: 40px 10px;
+  }
+  .books_section .category_tabs {
+    max-width: 75%;
+    margin: 0 auto 30px;
+    padding: 15px;
+  }
+  .books_section .tab {
+    font-size: 2.4rem;
+    margin-right: 20px;
+  }
+  .books_section .books_list_wrap {
+    max-width: 75%;
+    margin: 0 auto;
+  }
+  .books_section .books_list li {
+    width: 33.3334%;
+  }
+  .books_section .book_cover {
+    height: 24vh;
+  }
+  .books_section .book_title {
+    font-size: 1.7rem;
+  }
+  .books_section .book_info {
+    font-size: 1.5rem;
+  }
+  .books_section .book_date {
+    font-size: 1.5rem;
+  }
+  .books_section .more_link {
+    top: 15px;
+    right: calc(12.5% + 15px);
+    width: 2.4rem;
+    height: 2.4rem;
   }
   /*<----------푸터 footer---------->*/
   .footer {
@@ -538,9 +937,14 @@ body {
   }
 }
 /*==============================================
+|||||||||||||||||||||||||||||||||||||||||||||||||
   PC
+|||||||||||||||||||||||||||||||||||||||||||||||||
 ================================================*/
 @media only screen and (min-width: 1132px) {
+  /*==============================================
+    랜딩 페이지
+  ================================================*/
   /*<----------헤더 header---------->*/
   .header {
     box-shadow: 0 3px 3px rgba(35, 31, 32, 0.3);
@@ -695,5 +1099,93 @@ body {
   .visual_section .slider {
     max-width: 1920px;
     margin: 0 auto;
+  }
+  /*<----------홈 바로가기 아이콘 shortcut icons---------->*/
+  .shortcut_icon_section .center_wrap {
+    max-width: 1132px;
+    padding: 50px 0;
+  }
+  .shortcut_icon_section .slider_wrap {
+    max-width: calc(100% - 120px);
+  }
+  .shortcut_icon_section .slide {
+    width: 25%;
+  }
+  .shortcut_icon_section .content_wrap img {
+    max-height: 110px;
+  }
+  .shortcut_icon_section .prev_btn,
+.shortcut_icon_section .next_btn {
+    width: 60px;
+    height: 60px;
+  }
+  /*<----------홈 공지사항 notice---------->*/
+  .notice_and_block {
+    display: flex;
+    align-items: center;
+  }
+  .notice_section {
+    max-width: 50%;
+    margin: 0;
+    padding: 20px 30px;
+  }
+  .notice_section .section_head {
+    padding: 25px 15px;
+  }
+  .notice_section .notice_list {
+    padding: 25px 0;
+  }
+  .notice_section .notice_list li {
+    padding: 20px 0;
+  }
+  .notice_section .notice_list .notice_title a:hover, .notice_section .notice_list .notice_title a:focus {
+    text-decoration: underline;
+  }
+  .notice_section .notice_list .notice_date {
+    margin-left: 20px;
+  }
+  /*<----------홈 바로가기 블럭 shortcut block---------->*/
+  .shortcut_block_section {
+    width: 50%;
+  }
+  .shortcut_block_section > div {
+    position: relative;
+    width: 50%;
+    height: auto;
+    min-height: 230px;
+  }
+  .shortcut_block_section .text_wrap {
+    transition: all 0.4s;
+  }
+  .shortcut_block_section .text_wrap:hover, .shortcut_block_section .text_wrap:focus {
+    background: rgba(0, 0, 0, 0.6);
+  }
+  /*<----------도서 books---------->*/
+  .books_section {
+    padding: 40px 10px 50px;
+  }
+  .books_section .center_wrap {
+    padding: 0 30px;
+  }
+  .books_section .category_tabs {
+    max-width: initial;
+    margin: 0 auto 50px;
+    padding: 25px 15px;
+  }
+  .books_section .books_list_wrap {
+    max-width: initial;
+  }
+  .books_section .books_list li {
+    width: 25%;
+  }
+  .books_section .book_cover {
+    height: 360px;
+  }
+  .books_section .book_title {
+    margin: 25px 5px 10px;
+  }
+  .books_section .more_link {
+    top: 25px;
+    right: 45px;
   }
 }/*# sourceMappingURL=main.css.map */
